# telegram-assistant

./: .gitignore  README.md  pyproject.toml
apps/api/app/: ai_service.py  crud.py  db.py  extraction.py  main.py  models.py  schemas.py
apps/bot/: handlers.py  run_bot.py
tests/: test_ai_service.py  test_extraction.py  test_extraction_functions.py  test_main.py
