[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-assistant"
version = "0.1.0"
description = "Telegram personal AI assistant (attachments, OCR/ASR, RAG)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Rinat Sharifullin" }
]
dependencies = [
  #runtime deps go here, e.g.:
  #"fastapi",
  #"uvicorn[standard]",
  #"sqlalchemy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-requests",
  "types-python-dateutil",
]


# pytest

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]


# ruff

[tool.ruff]
# what to lint
src = ["src", "apps", "packages"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # import sorting
  "B",  # flake8-bugbear
]
ignore = [
  "E501",  # ignore long lines
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


# mypy

[tool.mypy]
python_version = "3.11"
files = ["src", "apps", "packages"]
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
pretty = true
show_error_codes = true